--- a/index.html
+++ b/index.html
@@ -5,7 +5,163 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Holy Rosary</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Playfair+Display:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        :root {
+            --primary-blue: #1E3A8A; /* Xanh Đức Mẹ đậm */
+            --accent-gold: #D4AF37;   /* Vàng kim loại */
+            --bg-dark: #0f172a;       /* Nền tối */
+            --card-bg: #fffbf0;       /* Màu giấy cũ nhẹ */
+            --text-dark: #2c3e50;
+            --text-light: #64748b;
+        }
+
+        body {
+            font-family: 'Lato', sans-serif;
+            background: radial-gradient(circle at center, #2c3e50 0%, #000000 100%);
+            margin: 0;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: var(--text-dark);
+        }
+
+        .main-wrapper {
+            width: 100%;
+            max-width: 420px;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .cross-icon {
+            color: var(--accent-gold);
+            font-size: 2rem;
+            margin-bottom: 15px;
+            text-shadow: 0 0 10px rgba(212, 175, 55, 0.5);
+        }
+
+        /* Thẻ Cầu Nguyện (Prayer Card) */
+        .prayer-card {
+            background-color: var(--card-bg);
+            border-radius: 12px;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.5);
+            border: 2px solid var(--accent-gold); /* Viền vàng */
+            padding: 25px 20px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        /* Trang trí góc */
+        .prayer-card::before, .prayer-card::after {
+            content: "✥";
+            position: absolute;
+            color: rgba(212, 175, 55, 0.2);
+            font-size: 1.5rem;
+        }
+        .prayer-card::before { top: 10px; left: 10px; }
+        .prayer-card::after { bottom: 10px; right: 10px; }
+
+        .card-header #date-display {
+            font-family: 'Playfair Display', serif;
+            font-style: italic;
+            color: var(--primary-blue);
+            font-size: 1.1rem;
+            margin: 0;
+        }
+
+        .divider {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 15px 0;
+        }
+        .divider span {
+            color: var(--accent-gold);
+            font-size: 1.2rem;
+            padding: 0 10px;
+        }
+        .divider::before, .divider::after {
+            content: "";
+            flex: 1;
+            border-bottom: 1px solid rgba(0,0,0,0.1);
+        }
+
+        /* Tabs chọn ngôn ngữ */
+        .lang-tabs {
+            display: flex;
+            justify-content: center;
+            gap: 5px;
+            margin-bottom: 20px;
+            background: rgba(0,0,0,0.05);
+            padding: 5px;
+            border-radius: 25px;
+        }
+
+        .lang-tab {
+            background: transparent;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 20px;
+            font-family: 'Lato', sans-serif;
+            font-size: 0.85rem;
+            color: var(--text-light);
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .lang-tab.active {
+            background-color: var(--primary-blue);
+            color: white;
+            box-shadow: 0 4px 6px rgba(30, 58, 138, 0.2);
+        }
+
+        /* Khung ảnh vòm cửa sổ nhà thờ */
+        .mystery-window {
+            width: 100%;
+            height: 200px;
+            border-radius: 100px 100px 12px 12px; /* Dạng vòm */
+            overflow: hidden;
+            position: relative;
+            border: 4px solid #fff;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
+        }
+
+        #mystery-img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .mystery-content h1 {
+            font-family: 'Playfair Display', serif;
+            color: var(--primary-blue);
+            font-size: 1.8rem;
+            margin: 10px 0 5px 0;
+            line-height: 1.2;
+        }
+
+        .mystery-content p {
+            font-size: 0.9rem;
+            color: var(--text-light);
+            margin-bottom: 25px;
+        }
+
+        /* Audio Player tùy chỉnh nhẹ */
+        .audio-wrapper audio {
+            width: 100%;
+            height: 40px;
+            border-radius: 20px;
+        }
+
+        footer {
+            margin-top: 25px;
+            color: rgba(255,255,255,0.4);
+            font-size: 0.75rem;
+            font-style: italic;
+            font-family: 'Playfair Display', serif;
+        }
+    </style>
 </head>
 <body>
 
@@ -46,6 +202,117 @@
             <p>Ad Majorem Dei Gloriam</p> </footer>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        // --- CẤU HÌNH ---
+        // 1. Thay đổi đường dẫn này bằng Public URL Bucket R2 của bạn
+        const R2_BASE_URL = "https://pub-68349844dd6d4ec5a3103816b64fec7a.r2.dev"; 
+
+        // 2. Tên file nhạc bạn đã upload lên R2 (Ví dụ: vui-vi.mp3, joyful-en.mp3...)
+        const RESOURCES = {
+            vi: {
+                joyful: "vui-vi.mp3",       // Năm sự Vui
+                sorrowful: "thuong-vi.mp3", // Năm sự Thương
+                glorious: "mung-vi.mp3",    // Năm sự Mừng
+                luminous: "sang-vi.mp3",    // Năm sự Sáng
+                labels: {
+                    joyful: "Năm Sự Vui",
+                    sorrowful: "Năm Sự Thương",
+                    glorious: "Năm Sự Mừng",
+                    luminous: "Năm Sự Sáng",
+                    loading: "Đang tải...",
+                    sub: "Kinh Mân Côi trọn bộ"
+                }
+            },
+            en: {
+                joyful: "Joyful Mysteries - Vui.m4a",
+                sorrowful: "Sorrowful Mysteries - Thương.m4a",
+                glorious: "Glorious Mysteries - Mừng.m4a",
+                luminous: "Luminous Mysteries - Sáng.m4a",
+                labels: {
+                    joyful: "Joyful Mysteries",
+                    sorrowful: "Sorrowful Mysteries",
+                    glorious: "Glorious Mysteries",
+                    luminous: "Luminous Mysteries",
+                    loading: "Loading...",
+                    sub: "Daily Holy Rosary"
+                }
+            },
+            id: {
+                joyful: "DOA ROSARIO Peristiwa Gembira ( Hari Senin & Sabtu ).m4a",
+                sorrowful: "DOA ROSARIO Peristiwa Sedih ( Hari Selasa & Jumat ).m4a",
+                glorious: "DOA ROSARIO Peristiwa Mulia ( Hari Rabu & Minggu ).m4a",
+                luminous: "DOA ROSARIO Peristiwa Terang ( Hari Kamis ).m4a",
+                labels: {
+                    joyful: "Peristiwa Gembira",
+                    sorrowful: "Peristiwa Sedih",
+                    glorious: "Peristiwa Mulia",
+                    luminous: "Peristiwa Terang",
+                    loading: "Memuat...",
+                    sub: "Rosario Suci Harian"
+                }
+            }
+        };
+
+        // --- LOGIC XỬ LÝ ---
+
+        // Lấy ngôn ngữ từ localStorage hoặc mặc định là tiếng Việt
+        let currentLang = localStorage.getItem('rosary_lang') || 'vi';
+
+        function getMysteryType() {
+            const day = new Date().getDay(); // 0 = Chủ Nhật, 1 = Thứ 2...
+            
+            // Logic Phụng vụ:
+            // T2 (1) & T7 (6): Vui
+            // T3 (2) & T6 (5): Thương
+            // T4 (3) & CN (0): Mừng
+            // T5 (4): Sáng
+            switch(day) {
+                case 1: case 6: return 'joyful';
+                case 2: case 5: return 'sorrowful';
+                case 4:         return 'luminous';
+                case 0: case 3: return 'glorious';
+                default:        return 'joyful';
+            }
+        }
+
+        function updateUI() {
+            const mysteryKey = getMysteryType();
+            const data = RESOURCES[currentLang];
+            
+            // Cập nhật text
+            document.getElementById('mystery-name').textContent = data.labels[mysteryKey];
+            document.getElementById('sub-text').textContent = data.labels.sub;
+
+            // Cập nhật ngày tháng
+            const dateOptions = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+            // Format ngày theo ngôn ngữ (vi-VN, en-US, id-ID)
+            const localeMap = { vi: 'vi-VN', en: 'en-US', id: 'id-ID' };
+            document.getElementById('date-display').textContent = new Date().toLocaleDateString(localeMap[currentLang], dateOptions);
+
+            // Cập nhật Audio Link
+            const audioPlayer = document.getElementById('audio-player');
+            const fileName = data[mysteryKey];
+            const newSrc = `${R2_BASE_URL}/${fileName}`;
+
+            // Chỉ load lại nếu source thay đổi để tránh gián đoạn nếu user bấm lung tung
+            if (!audioPlayer.src.includes(fileName)) {
+                audioPlayer.src = newSrc;
+                audioPlayer.load(); 
+            }
+
+            // Cập nhật nút active
+            document.querySelectorAll('.lang-tab').forEach(btn => btn.classList.remove('active'));
+            document.getElementById(`btn-${currentLang}`).classList.add('active');
+        }
+
+        function changeLanguage(lang) {
+            currentLang = lang;
+            localStorage.setItem('rosary_lang', lang); // Lưu nhớ cho lần sau
+            updateUI();
+        }
+
+        // Chạy khi web tải xong
+        document.addEventListener('DOMContentLoaded', updateUI);
+    </script>
 </body>
 </html>
